Fixed the random side gap on mobile - finally

--- a/resources/assets/sass/front/components/footer.scss
+++ b/resources/assets/sass/front/components/footer.scss
@@ -2,7 +2,7 @@
 
     background: $darkGrey;
     color: $white;
-    padding: 1rem 0;
+    padding: 1rem 1.5rem;
 
     p{
         padding: 0.5rem 0.75rem;
